deactivated console service